fix: 드라이브 저장소 연결 오류 처리 개선